--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     font-family: "Montserrat", sans-serif;
   }
   .top {
-    height: 1440px;
+    height: 1024px;
     background-image: url(img2/Rectangle\ 1.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -77,6 +77,7 @@
     padding-left: 32px;
     padding-bottom: 32px;
     border-radius: 18px;
+    text-decoration: none;
   }
   .for_item1 {
     background-image: url(img2/Rectangle\ 1.1.jpg);
