--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
     padding-left: 32px;
     padding-bottom: 32px;
     border-radius: 18px;
-    text-decoration: none;
+    text-decoration: noneN;
   }
   .for_item1 {
     background-image: url(img2/Rectangle\ 1.1.jpg);
