--- a/style.css
+++ b/style.css
@@ -57,6 +57,11 @@
     font-weight: 400;
     line-height: normal;
   }
+  .press:hover {
+  color: #FFF;
+  background-color: #EB443F;
+  transition: all 0.3s;
+  }
   .for {
     padding-top: 128px;
     gap: 32px;
@@ -77,7 +82,13 @@
     padding-left: 32px;
     padding-bottom: 32px;
     border-radius: 18px;
-    text-decoration: noneN;
+    text-decoration: none;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .for_item:hover{
+    border: 3px solid #44D2FF;
+    transition: all 0.3s;
   }
   .for_item1 {
     background-image: url(img2/Rectangle\ 1.1.jpg);
@@ -87,4 +98,39 @@
   }
   .for_item3 {
     background-image: url(img2/Rectangle\ 1.3.jpg);
+  }
+
+  @media (max-width: 767px) and (min-width: 374px) {
+    .titul{
+      margin: 0 12px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .text_1 {
+      text-align: center;
+      font-size: 32px;
+      width: 343px;
+      padding-left: 8px;
+    }
+   .motto_1 {
+      text-align: center;
+      font-size: 14px;
+      width: 343px;
+      line-height: 22px;
+      padding-left: 8px;
+  }
+    .press_around{
+      padding-top: 44px;
+      padding-left: 15px;
+     }
+    .for{
+      display: flex;
+      flex-wrap: wrap;
+      height: 100%;
+      padding-bottom: 160px;
+    }
+    .for_item{
+      margin: 0 12px;
+    }
   }
