--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   }
   .text{
     padding-top: 217px;
-    padding-left: 120px;
+    padding-left: 240px;
   }
   .text_1{
     color: #FFF;
@@ -27,7 +27,7 @@
   }
   .motto{
     padding-top: 32px;
-    padding-left: 120px;
+    padding-left: 240px;
     width: 480px;
     height: 64px;
   }
@@ -41,7 +41,7 @@
   }
   .press_around{
     padding-top: 44px;
-    padding-left: 120px;
+    padding-left: 240px;
   }
   .press{
     background: #9C0332;
@@ -100,6 +100,47 @@
     background-image: url(img2/Rectangle\ 1.3.jpg);
   }
 
+  .block3 {
+    padding-top: 128px;
+    gap: 32px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background: #000915;
+    height: 800px;
+  }
+  .seasons {
+    width: 700px;
+  }
+  .text2 {
+    padding-top: 40px;
+  }
+  .text_2{
+    color: #FFF;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    width: 788px;
+  }
+  .motto2 {
+    padding-top: 32px;
+    width: 584px;
+    height: 64px;
+  }
+  .motto_2 {
+    color: #FFF;
+    font-family: 'Montserrat';
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px; 
+  }
+  .press_around2 {
+    padding-top: 44px;
+  }
+  
+
   @media (max-width: 767px) and (min-width: 374px) {
     .titul{
       margin: 0 12px;
@@ -132,5 +173,34 @@
     }
     .for_item{
       margin: 0 12px;
+    }
+
+    .block3 {
+      display: flex;
+      flex-wrap: wrap;
+      height: 100%;
+      padding-bottom: 160px;
+    }
+    .text_2 {
+      text-align: center;
+      font-size: 32px;
+      width: 343px;
+      padding-left: 20px;
+    }
+    .motto_2 {
+      text-align: center;
+      font-size: 14px;
+      width: 343px;
+      line-height: 22px;
+      padding-left: 20px;
+    }
+    .press_around2{
+      padding-top: 44px;
+      padding-left: 70px;
+    }
+    .joystick1 img{
+      height: 236px;
+      width: 344px;
+
     }
   }
